# test-halo2

./: .gitignore  Cargo.toml  README.md  fri-initial-proof.json  fri-instance.json  fri-precomputed.json  fri_compute_evaluation_0.json
src/: field.rs  fri.rs  interpolation.rs  lib.rs  map_to_curve.rs  merkle_tree.rs  merkle_tree_circuit.rs  poseidon_test.rs  reducing.rs  utils.rs
